--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,16 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+html,
+body {
+  padding: 0;
+  margin: 0;
+}
+
+.output {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.output__character--species--title, .output__character--status--title, .output__character--name--title {
+  color: grey;
+}
+/*# sourceMappingURL=main.css.map */
